@@ -1,3 +1,6 @@
+2011-09-08
+ * change_constraints API
+
 2011-09-04
  * Startup and Shutdown states
 
